2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>

	* SimpleProjectMakefileHandler.cs: Fix nullref.

2009-06-23  Jérémie Laval  <jeremie.laval@gmail.com>
	* MonoDevelop.Autotools.csproj:
	* Makefile.am: Added the new files
	
	* Switch.cs:
	* gtk-gui/MonoDevelop.Autotools.MakefileSwitchEditor.cs
	* gtk-gui/MonoDevelop.Autotools.MakefileSwitchEditorWidget.cs:
	* MakefileSwitchEditorWidget.cs:
	* MakefileSwitchEditor.cs: new switch editor code
	
	* gtk-gui/objects.xml:
	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Autotools.TarballBuilderEditorWidget.cs:
	* SimpleProjectMakefileHandler.cs:
	* Handler.cs:
	* SolutionDeployer.cs:
	* AutotoolsContext.cs:
	* TarballBuilderEditorWidget.cs: Added switch editor support code

2009-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MakefileData.cs: Track assembly lookup APIs.

2009-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileData.cs:
	* MakefileProjectServiceExtension.cs: Disable makefile
	  integration on windows for now.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileData.cs:
	* AutotoolsContext.cs:
	* SimpleProjectMakefileHandler.cs:
	* MakefileProjectServiceExtension.cs: Use the new FilePath
	  class for handling file and directory paths.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Autotools.csproj: don't require specific
	gtk-sharp version.

2009-04-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileData.cs:
	* SolutionDeployer.cs:
	* AutotoolsContext.cs:
	* SimpleProjectMakefileHandler.cs: Moved SystemAssemblyService
	  and related classes to the namespace
	  MonoDevelop.Core.Assemblies.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Autotools.addin.xml: Bump MD version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileData.cs:
	* SimpleProjectMakefileHandler.cs: Track api changes to
	  support multiple target runtimes.

2009-02-26  Mike Krüger  <mkrueger@novell.com>
